fixed details falling behind

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -13,7 +13,6 @@
 
 .wrapper > * {
   border: 0px solid #f08c00;
-  padding: px;
 }
 
 .wrapper {
@@ -31,11 +30,11 @@
   grid-row: 1 / 2;
 }
 .hero-video {
-  grid-column: col-start 3 / span 8;
+  grid-column: col-start 4 / span 6;
   grid-row: 2 / 3;
 }
 .details {
-  grid-column: col-start 11 / span 1;
+  grid-column: col-start 10 / span 2;
   grid-row: 2 / 3;
 }
 .content {
