--- a/app/assets/stylesheets/video_details.scss
+++ b/app/assets/stylesheets/video_details.scss
@@ -33,6 +33,6 @@
     justify-content: space-between;
     align-items: left;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 30px;
   }
 }
