--- a/app/assets/stylesheets/videos/index.scss
+++ b/app/assets/stylesheets/videos/index.scss
@@ -72,8 +72,8 @@
   min-width: 80px;
 }
 .video-upload_date {
-  width: 10%;
-  min-width: 80px;
+  width: 15%;
+  min-width: 200px;
 }
 
 @media (max-width: 1000px) {
@@ -131,7 +131,7 @@
     min-width: 80px;
   }
   .video-upload_dates {
-    width: 9%;
-    min-width: 80px;
+    width: 20%;
+    min-width: 120px;
   }
 }
